# uOS

./: .travis.yml  CMakeLists.txt  Makefile  README.md  bochsConfig.txt  build-tests.sh  build.sh  buildISO.sh  clear-env.sh  compileAndLink.sh  getGRUB.sh  hack.sh  installDependencies.sh  link.ld  loader.s  requirements.txt  run.bat  runVM.sh
grub/: menu.lst
src/: CMakeLists.txt  kmain.c  link.ld  loader.asm  loader.s  multiboot.h
src/apps/: CMakeLists.txt  terminal.c  terminal.h
src/drivers/: CMakeLists.txt  drivers.asm  framebuffer.c  framebuffer.h  io.h  io.s  keyboard.c  keyboard.h  keyboard_asm.s  serial.c  serial.h  vga.c  vga.h
src/kernel/: CMakeLists.txt  gdt.c  gdt.h  gdt_asm.s  idt.c  idt.h  idt_asm.s  interrupt.asm  isr.c  isr.h  kernel.asm  kmain.c
src/stdlib/: CMakeLists.txt  defs.h  math.c  math.h  stdarg.h  stdint.h  stdio.c  stdio.h  string.c  string.h
test/: CMakeLists.txt
test/googletest/: CMakeLists.txt
